infrastructure/vaultwarden/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
spec:
  parentRefs:
    - name: main
      namespace: envoy-system
      sectionName: https
  hostnames:
    - "vaultwarden.hackcorp.net"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: vaultwarden
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
